# VelotixDataProxy

./: 421 - Project Document.docx  421 -- Presentation 1.pptx  README.md
Rust Code Demo/Data_Access_Project_1/: Cargo.toml  example.txt
Rust Code Demo/Data_Access_Project_1/src/: main.rs
Rust Code Demo/SQL_Template/: Cargo.toml  example.txt
Rust Code Demo/SQL_Template/src/: main.rs
Rust Code Demo/SQL_Test/: Cargo.toml  example.db
Rust Code Demo/SQL_Test/src/: main.rs
Rust Code Demo/SQL_reed/SQL_reed_code/: example-long.txt
Rust Code Demo/SQL_reed/SQL_reed_code/src/: main.rs
Rust Code Demo/src_hemendra_postgres/: main.rs
RustPractice/Derek/HelloWorld/: main.rs
RustPractice/Derek/SQL_Test/: Cargo.toml  example.db
RustPractice/Derek/SQL_Test/src/: main.rs
RustPractice/Derek/Structured_Data/: Cargo.toml
RustPractice/Derek/Structured_Data/src/: main.rs
RustPractice/Derek/guessing_game/src/: main.rs
RustPractice/Reed/: test.rs
RustPractice/Reed/Reed-SurrealDB-Demo/: Cargo.toml
RustPractice/Reed/Reed-SurrealDB-Demo/src/: main.rs
RustPractice/Reed/fileInput_and_mapReduce/FIAMR/: Cargo.toml  data.txt
RustPractice/Reed/mapFilter_demo/mapFilter/: Cargo.toml
RustPractice/Reed/mongo/rustMongo/: Cargo.toml
RustPractice/Reed/mongo/rustMongo/src/: main.rs
RustPractice/hemendra/: hello.rs  keyvalue.rs  readme.md
RustPractice/hemendra/keydemo/: Cargo.toml  cargo.toml  log.txt  main.rs  main2.rs  users.db
RustPractice/hemendra/keydemo/src/: main.rs
RustPractice/hemendra/unstructured/: Cargo.toml
(+3 files in other folders)
