[patch.crates-io]
librocksdb-sys = { path = "/Users/reedhavens/Desktop/Fall-2022/rocksdb/rust-rocksdb/librocksdb-sys" }

[package]
name = "surreal_d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.8"
# For smaller dependencies
# surrealdb = {version = "1.0.0-beta.8", default-features=false, features = ['parallel', 'kv-mem'] }

tokio = { version = "1", features = ["full"] }
anyhow = "1"


